# relay

./: .gitignore  LICENSE  README.md  build.sh  config.toml  config.yaml  deploy.sh  go.mod  health.go  main.go  make.sh  quit.sh  requirements.txt  sat-x.service  stop.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: health.yml  net.yml  rust.yml
agrinet/: README.md  agrinet.service  deploy.sh  main.py  requirements.txt
agrinet/utils/: DataLoader.py
altimeter/: i2c.go  main.go
camera/: README.md  camera.py  camera.py~  camera.service  deploy.sh  main  main.go  sat_camera.sh
cmd/: main.go
collator/: collate.go  go.mod
health/: Cargo.toml  README.md  deploy.sh  go.mod  health.go  health.service  release.sh
health/src/: config_loader.rs  main.rs  system_info.rs
internal/config/: config.go
internal/logging/: logging.go
internal/utils/: retry.go
lib/: health.go
lib/altimeter/: BMP390.cpp  bmp3.c
lib/gps/: Ada_GPS.cpp  Ada_GPS.h  NMEA_data.cpp  NMEA_data.h  NMEA_parse.cpp
lib/telemetry/: RHGenericDriver.cpp  RHGenericDriver.h  RHHardwareSPI.cpp  RHSPIDriver.h  RH_RF69.h  (+6 more)
net/: DummyProducer.py  environment.yml  main.py  requirements.txt
odometry/: BMP390.cpp  BMP390.h  altimeter.c  altimeter.cpp  altimeter.h  bmp3.c  deploy.sh  odometry  odometry.cpp  odometry.h  odometryMain
telemetry/: Makefile  RHSPIDriver.cpp  RHSPIDriver.h  dataStruct.h  deploy.sh  radio.cpp  rf95  rf95.cpp  rf95.h  telemetry.cpp  telemetry.h  telemetryMain  telemetryMain.py  test.sh
(+28 files in other folders)
